tests/should-fail/rawcodes/rawcodelit-4.j
globals
	integer h = 'abc\\'
endglobals